--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   />
-    <link rel="manifest" href="manifest.webmanifest" />
+    <!-- <link rel="manifest" href="manifest.webmanifest" /> -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
